@@ -1,119 +1,103 @@
-# Post-Disaster Emergency Mesh Network Simulator (Java, Console Edition)
+# Post-Disaster Emergency Mesh Network Simulator
 
-A graph-theoretic simulator of a decentralized mesh network used for
-communication during disaster response, when centralized infrastructure
-(cell towers, fiber, internet backbone) has failed.
+CS5304 Java Programming · CO1–CO5
 
-This is a **pure console (CLI) Java application** — no GUI, no external
-dependencies, JDK standard library only.
+A disaster-response mesh network simulator: nodes (survivors, rescue teams,
+relays, base stations) route messages across a field scattered with
+obstacles (floods, fires, rubble, collapsed buildings) whose signal
+attenuation and line-of-sight blocking change what routes are possible.
+Five routing protocols run behind one interface, threads model a live,
+moving network, and both a console and a Swing front-end sit over the same
+simulation core.
 
-## Concept
+See `EXECUTION_PLAN.md` for the full phase-by-phase design and rationale, and
+`PROGRESS_NOTES.md` for what has actually been built so far and why certain
+choices were made.
 
-* **Nodes** are survivor devices, rescue-team devices, or dropped relays,
-  each with a position, transmission range, and battery energy.
-* **Links** form automatically between any two active nodes within radio
-  range of each other, *unless* a disaster obstacle (flood, fire, rubble,
-  building collapse) blocks the line of sight between them.
-* **Routing protocols** (BFS and Dijkstra) find multi-hop paths for
-  emergency messages across the resulting graph.
-* **Energy model** deducts battery for every transmission/reception; nodes
-  that hit 0 energy go offline and the network automatically rebuilds its
-  links (self-healing).
-* **Metrics** track Packet Delivery Ratio, average hop count, coverage
-  ratio, network lifetime, route-recovery time, and energy efficiency —
-  the same metrics defined in the project's design document.
+## Requirements
 
-## Project Structure
+- JDK 21 (LTS) — `java -version` and `javac -version` must both say 21.
+- Maven (recommended) — resolves `org.xerial:sqlite-jdbc` and JUnit 5 automatically.
 
-```
-mesh-sim/
-├── src/main/java/com/meshsim/
-│   ├── Main.java                     Entry point
-│   ├── model/                        Environment Layer + Node Layer
-│   │   ├── Node.java
-│   │   ├── NodeType.java
-│   │   ├── Obstacle.java
-│   │   └── Environment.java
-│   ├── network/                      Communication Layer
-│   │   ├── Link.java
-│   │   └── MeshNetwork.java
-│   ├── routing/                      Routing Layer
-│   │   ├── Router.java
-│   │   ├── BFSRouter.java
-│   │   ├── DijkstraRouter.java
-│   │   └── Route.java
-│   ├── energy/                       Energy Layer
-│   │   └── EnergyModel.java
-│   ├── simulation/                   Orchestration + Metrics
-│   │   ├── Simulator.java
-│   │   ├── Metrics.java
-│   │   └── ScenarioBuilder.java
-│   ├── data/                         Dataset loading
-│   │   └── DatasetLoader.java
-│   └── ui/                           Console (Visualization Layer, text-based)
-│       ├── ConsoleMenu.java
-│       └── Display.java              Boxed reports, progress bars, alert banners
-├── data/
-│   └── sample_nodes.csv              Sample 30-node deployment dataset
-├── docs/
-│   └── PROGRESS_NOTES.md             Implementation status / next steps
-├── build.sh
-└── run.sh
-```
-
-This mirrors the six-layer architecture from the design document
-(Environment, Node, Communication, Routing, Energy, Visualization — the
-Visualization Layer here is the text console instead of graphics).
-
-## Build & Run
-
-Requires JDK 11+ (works fine with JDK 17/21).
+## Build & run
 
 ```bash
-./build.sh      # compiles everything into out/
-./run.sh        # launches the interactive console menu
+./build.sh              # mvn package -> target/mesh-sim.jar
+./run.sh --gui          # launches the Swing app (default)
+./run.sh --cli          # launches the original console menu
 ```
 
-Or manually:
+`StructuredTaskScope` (used to race routing protocols concurrently) is a
+**preview API** in JDK 21, so both the build and the run step pass
+`--enable-preview` — already wired into `pom.xml`, `build.sh`, and `run.sh`.
+
+### Manual compilation path (no Maven)
+
+The syllabus separately asks for the compilation/execution process to be
+demonstrable without a build tool hiding it:
 
 ```bash
-find src -name "*.java" > sources.txt
-javac -d out @sources.txt
-java -cp out com.meshsim.Main
+mkdir -p out
+find src/main/java -name "*.java" > sources.txt
+javac -d out --release 21 --enable-preview -cp lib/sqlite-jdbc.jar @sources.txt
+java --enable-preview -cp "out:lib/sqlite-jdbc.jar" com.meshsim.Main --cli
 ```
 
-## Using the console menu
+(This requires `sqlite-jdbc.jar` to already be on disk under `lib/` — Maven
+fetches it automatically, this path does not.)
 
-1. **Load predefined scenario** — pick one of the four experimental
-   scenarios from the design document: Isolated Survivor, Relay
-   Formation, Flood Barrier, or Self-Healing Network.
-2. **Load node dataset from CSV** — load `data/sample_nodes.csv` (format:
-   `id,x,y,type,range,energy`, type ∈ SURVIVOR/RESCUE/RELAY).
-3. **View network / node status** — lists every node's position, battery
-   percentage, and active/down state, plus current obstacles.
-4. **Send emergency message** — pick a source and destination node and a
-   routing protocol (BFS or Dijkstra); the simulator prints the resulting
-   path and consumes energy hop-by-hop.
-5. **Simulate node failure** — manually take a node offline (simulating
-   a destroyed device or dead battery) and watch the network rebuild its
-   links.
-6. **View performance metrics** — Packet Delivery Ratio, average hop
-   count, energy consumed/efficiency, network lifetime, recovery time.
-7. **Compute coverage ratio** — reachable survivors / total survivors
-   from a chosen rescue node.
-8. **Add obstacle** — drop a flood zone / fire region / rubble field /
-   building collapse anywhere on the map and see which links break.
+## Architecture
 
-## What's implemented so far (~30–35% of the full design)
+```
+src/main/java/com/meshsim/
+├── Main.java            --cli | --gui entry point over one shared simulation core
+├── model/                Point, Node, NodeType, Obstacle (sealed) + 4 obstacle records,
+│                         Scenario (Cloneable), Message, Priority
+├── network/               Link, MeshNetwork, PathLossModel
+├── routing/               Router, MobileRouter, AbstractRouter, BFSRouter, DijkstraRouter,
+│                         EnergyAwareDijkstraRouter, AODVRouter, DSRRouter, EpidemicRouter
+├── energy/                 EnergyModel, RadioProfile
+├── concurrent/             SimulationClock, NodeWorker, BatteryDrainer, MobilityEngine,
+│                         EventBus, SimulationEvent, PacketQueue, Simulator
+├── io/                     DatasetLoader, SimulationLogger, ReportWriter, CsvExporter, StateSerializer
+├── exception/              MeshSimulationException hierarchy (checked + unchecked)
+├── util/                   Repository<T>, Identifiable, TopK, BatteryLeaderboard, MetricsAggregator
+├── persistence/            ConnectionFactory, ScenarioDao/JdbcScenarioDao, SimRunDao/JdbcSimRunDao
+├── gui/                    MeshSimFrame, MapPanel, ControlPanel, NodeTableModel
+└── cli/                    ConsoleMenu (the original console front-end, kept working)
+```
 
-Implemented: node/environment/obstacle model, distance-based graph
-construction with obstacle-aware link blocking, BFS and Dijkstra routing,
-a first-order radio energy model with automatic node failure, network
-self-healing via graph rebuild, the four experimental scenarios, CSV
-dataset loading, and full performance-metrics tracking — all driven from
-a console menu.
+## Syllabus-to-code map
 
-Not yet implemented (see `docs/PROGRESS_NOTES.md`): DSR/AODV protocols,
-Random Waypoint mobility, GUI/graphical visualization, log-distance path
-loss per-obstacle exponent wiring into the energy model, and automated
-report/CSV export of metrics.
+| Unit | Concept | Where |
+|---|---|---|
+| 1 | Static members, access specifiers, Object overrides | `model/Node.java` |
+| 2 | Sealed interfaces, records, pattern matching for switch | `model/Obstacle.java` and its 4 record implementations |
+| 2 | Abstract classes vs interfaces, `final` template method | `routing/Router.java`, `routing/AbstractRouter.java` |
+| 2 | Extending interfaces | `routing/MobileRouter.java` (implemented only by `EpidemicRouter`) |
+| 3 | Custom checked/unchecked exception hierarchy | `exception/` |
+| 3 | Character/byte streams, try-with-resources | `io/DatasetLoader.java`, `io/StateSerializer.java` |
+| 3 | `StringBuffer` (deliberate, concurrent-safe) | `io/SimulationLogger.java` |
+| 4 | Generics, bounded types, type erasure note | `util/Repository.java`, `util/TopK.java` |
+| 4 | Both thread-creation styles, daemon threads, thread groups | `concurrent/SimulationClock.java` (extends Thread), `concurrent/NodeWorker.java` (Runnable), `concurrent/BatteryDrainer.java`, `concurrent/Simulator.java` |
+| 4 | Virtual threads, structured concurrency | `concurrent/Simulator.java` |
+| 4 | `synchronized` vs `ReentrantReadWriteLock` | `energy/EnergyModel.java` vs `network/MeshNetwork.java` |
+| 5 | `TreeSet`/`SortedSet`, `Arrays` utility class | `util/BatteryLeaderboard.java`, `util/MetricsAggregator.java` |
+| 5 | JDBC + DAO, transactions | `persistence/` |
+| 5 (K6) | Swing desktop app | `gui/` |
+
+## Sample data
+
+`src/main/resources/sample-scenario.csv` is a small, well-formed dataset for
+`DatasetLoader`. Corrupt copies of it (bad column count, unknown type,
+non-numeric coordinate, negative energy) are exercised directly in
+`DatasetLoaderTest`.
+
+## Tests
+
+```bash
+mvn test
+```
+
+Covers `BFSRouter` and `DijkstraRouter` on hand-built graphs, and all four
+named `DatasetLoader` failure cases.
